activity4/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-redis-deployment
  labels:
    app: todo-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-redis
  template:
    metadata:
      labels:
        app: todo-redis
    spec:
      containers:
      - name: todo
        image: natawut/todo-service:release-2.1
        ports:
        - containerPort: 8000
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-redis
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
